--- a/src/components/Comments.astro
+++ b/src/components/Comments.astro
@@ -3,10 +3,11 @@
 <div id="comments">
     <h1 class="comment-header">Comments</h1>
     <div class="commentbox"></div>
-    <script src="https://unpkg.com/commentbox.io/dist/commentBox.min.js"></script>
-    <script>commentBox('5759568818733056-proj', {
-        subtextColor: 'var(--accent-midtone)'
-    })</script>
+    <script src="https://unpkg.com/commentbox.io/dist/commentBox.min.js">
+        commentBox('5759568818733056-proj', {
+            subtextColor: 'var(--accent-midtone)'
+        });
+    </script>
 </div>
 <style>     
 #comments {
