refactor reader controls; improve comment view transitions

--- a/src/components/BookFooter.astro
+++ b/src/components/BookFooter.astro
@@ -22,6 +22,7 @@ const date = new Date(frontmatter.lastEdit).toLocaleDateString().replaceAll('/',
 .post-matter {
     font-family: 'Source Code Pro', monospace;
     font-size: 14px;
+    padding-top: 20px;
 }
 .last-edit {
     text-align: right;
