--- a/src/components/ReaderControls.astro
+++ b/src/components/ReaderControls.astro
@@ -4,8 +4,8 @@
     <ul id="reader-controls" class="hidden">
         <li><b>Font size:</b> <button type="button" class="decreaseFont">-</button> <button type="button" class="increaseFont">+</button></li>
         <li><b>Line height:</b> <button type="button" class="decreaseLineHeight">-</button> <button type="button" class="increaseLineHeight">+</button></li>
-        <!-- <li><b>Paragraph spacing:</b> <button type="button">-</button> <button type="button">+</button></li>
-        <li><b>Theme:</b> <button type="button">Light</button> <button type="button">Dark</button></li> -->
+        <li><b>Paragraph spacing:</b> <button type="button" class="decreasePSpacing">-</button> <button type="button" class="increasePSpacing">+</button></li>
+        <!-- <li><b>Theme:</b> <button type="button">Light</button> <button type="button">Dark</button></li> -->
         <li><b>Font:</b> 
             <button type="button" class="changeArial"><span style="font-family: Arial, sans-serif;">Arial</span></button> 
             <button type="button" class="changeHelvetica"><span style="font-family: Helvetica, sans-serif;">Helvetica</span></button> 
