--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,5 +6,5 @@ const pageTitle = "About";
   <h2>About</h2>
   <p>Artist, writer, and software developer.</p>
   <p>Insect and invertebrate enthusiast.</p>
-  <p>If you read my stories carefully, you can see that all my favorite themes have remained unchanged for the past</p>
+  <p>If you read my stories carefully, you can see that all my favorite themes have remained unchanged for the past 10 years.</p>
 </InsectSplashLayout>
