--- a/src/pages/credits.astro
+++ b/src/pages/credits.astro
@@ -4,8 +4,10 @@ const pageTitle = "Index";
 ---
 <InsectSplashLayout pageTitle={pageTitle}>
   <h2>Credits</h2>
-  <p>Resources that I used to build this website:</p>
+  <p>This website was made with the Astro static site generator framework and deployed via Github Books.</p>
+  <p>Other resources that I used to build this website:</p>
   <ul>
+    <p>Google Fonts</p>
     <li><a href="https://kayleerowena.com/blog/2025/code-template/#top">Portfolio Template</a> by Kaylee Rowena</li>
     <li><a href="https://www.toptal.com/designers/subtlepatterns/topography/">Topography pattern</a> by Shankar Ganesh</li>
     <li><a href="https://codepen.io/Kseso/pen/KKwjRy">Fancy Horizontal Rule Demo</a></li>
