--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,6 +13,8 @@ const pageTitle = "Index";
 
   <h2>To do list</h2>
   <ul>
+    <li>Add table of contents sidebar to webnovel reader pages</li>
+    <li>Finish proofing website against mobile</li>
     <li>Add dark/light mode support</li>
   </ul>
 </InsectSplashLayout>
