--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,4 @@
 html {
-    background-color: #ffffff;
     font-family: sans-serif;
     height: 100%;
 }
@@ -7,7 +6,7 @@ html {
 body {
     margin: 0;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    height: 100%;
+    min-height: 100%;
 }
 
 h1 {
