--- a/src/styles/root.css
+++ b/src/styles/root.css
@@ -7,4 +7,5 @@
     --accent-contrast-dark: #461905;
     --accent-contrast-light: #d55a26;
     --accent-light: #9dcbb8;
+    --accent-ultralight: #dcf0e8;
 }
