fix comments page transition issue

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,10 +5,10 @@ import ReaderControls from "./ReaderControls.astro"
     <div class="logo">skolomorphic</div>
     <nav>
         <div class="navlinks">
-            <a href="/">Home</a>
-            <a href="/projects">Projects</a>
-            <a href="/about">About</a>
-            <a href="/credits">Credits</a>
+            <a href="/" data-astro-reload>Home</a>
+            <a href="/projects" data-astro-reload>Projects</a>
+            <a href="/about" data-astro-reload>About</a>
+            <a href="/credits" data-astro-reload>Credits</a>
         </div>
     </nav>
 </header>
