--- a/src/layouts/BookLayout.astro
+++ b/src/layouts/BookLayout.astro
@@ -19,6 +19,7 @@ const allPages = Object.values(import.meta.glob('./*.md', { eager: true }));
         <script is:inline>
             // make header sticky instead of fixed?
             // add 'pre' formatting for system announcements?
+            // fix reader control page view transition
             import "../scripts/readerControls.js";
         </script>
 
