--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -4,5 +4,5 @@ const pageTitle = "Projects";
 ---
 <InsectSplashLayout pageTitle={pageTitle}>
   <h2>Projects</h2>
-  <p><b>Proof of Existence:</b> My Webbed Novel. <a href="/proof-of-existence/">read here</a></p>
+  <p><b>Proof of Existence:</b> My Webbed Novel. <a href="/proof-of-existence/" data-astro-reload>read here</a></p>
 </InsectSplashLayout>
