--- a/src/components/Comments.astro
+++ b/src/components/Comments.astro
@@ -14,7 +14,7 @@ const { title } = Astro.props;
         data-page-title={title}
     ></div>
     <script async defer src="https://cusdis.com/js/cusdis.es.js"></script>
-    <script is:inline>
+    <script is:inline data-astro-rerun>
         function reloadComments() {
             window.CUSDIS.initial();
             fixIframe();
@@ -30,8 +30,8 @@ const { title } = Astro.props;
                 observer.observe(iframe.contentWindow.document.body, { childList: true, subtree: true });
             }
         }
-        document.addEventListener("astro:after-swap", reloadComments);
-        window.addEventListener('load', function () { fixIframe() });
+        document.addEventListener("astro:after-swap", function () { reloadComments(); });
+        window.addEventListener('load', function () { fixIframe(); });
     </script>
 </div>
 <style>     
