--- a/src/styles/root.css
+++ b/src/styles/root.css
@@ -1,5 +1,5 @@
 :root {
-    --main-bg-color: #d7e2d9;
+    --main-bg-color: #ffffff;
     --body-bg: #f1fbf3;
     --text-body: #000;
     --accent-dark: #245343;
