add responsive header & dark mode toggle

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,13 +2,12 @@
 ---
 <header class="topnav">
     <div class="logo">skolomorphic</div>
-    <nav>
-        <div class="navlinks">
-            <a href="/" data-astro-reload>Home</a>
-            <a href="/projects" data-astro-reload>Projects</a>
-            <a href="/about" data-astro-reload>About</a>
-            <a href="/credits" data-astro-reload>Credits</a>
-        </div>
+    <button class="mainlinkstoggle"><i class="fas fa-chevron-down"></i></button>
+    <nav id="navlinks">
+        <a href="/" data-astro-reload>Home</a>
+        <a href="/projects" data-astro-reload>Projects</a>
+        <a href="/about" data-astro-reload>About</a>
+        <a href="/credits" data-astro-reload>Credits</a>
     </nav>
 </header>
 <style>
@@ -20,71 +19,145 @@
     position: fixed;
     top: 0;
     left: 0;
-    text-align: center;
+    display: grid;
+    grid-gap: 10px;
+    grid-template: 
+        "logo links toggle"
+        / minmax(100px, 1fr) minmax(500px, 80ch) minmax(100px, 1fr);
+}
+
+.mainlinkstoggle {
+    border: none;
+    background-color: transparent;
+    display: none;
+    grid-area: toggle;
+    font-size: 24px;
 }
 
 /** NAVLINKS BASE */
 .logo {
-    position: absolute;
-    left: 0;
-    top: 0;
-    padding: 16px;
     font-family: 'Astloch';
     color: var(--accent-contrast-light);
     font-weight: 700;
     font-size: 45px;
+    grid-area: logo;
+    text-align: center;
 }
-.navlinks a {
+
+.toggle-controls {
+   grid-area: toggle;
+}
+#navlinks {
+    grid-area: links;
+    display: flex;
+    justify-content: space-evenly;
+}
+#navlinks a {
     color: var(--accent-light);
     text-decoration: none;
-    display: inline-block;
     padding: 16px 32px;
     font-size: 1.5rem;
     transition: all 0.1s ease-in-out;
-    margin: 0px 20px;
     position: relative;
     font-family: 'Flamenco';
     font-variant: small-caps;
+    flex: auto;
+    text-align: center;
 }
-.navlinks a:hover, .navlinks a:active {
+#navlinks a:hover, #navlinks a:active {
     color: var(--accent-light);
     text-decoration: underline wavy var(--accent-contrast-light);
     transform: rotate(5deg);
     transition: all 0.1s ease-in-out;
 }
-.navlinks a:nth-child(odd):hover, .navlinks a:nth-child(odd):active {
+#navlinks a:nth-child(odd):hover, #navlinks a:nth-child(odd):active {
     color: var(--accent-light);
     text-decoration: underline wavy var(--accent-contrast-light);
     transform: rotate(-5deg);
 }
 
 /** NAVLINKS DECO */
-.navlinks a::before {
+#navlinks a::before {
     content: '𓆨';
     font-size: 50px;
     line-height: 0rem;
     position: absolute;
     margin: 0;
     padding: 0;
-    left: -30px;
     color: var(--accent-contrast-light);
     display: inline-block;
     color: var(--accent-dark);
-    transition: all 0.2s ease-in-out;
-    /* right: -18px; */
+    transition: all 0.3s ease-in-out;
+    display: none;
 }
-.navlinks a:nth-child(even)::before {
+#navlinks a:nth-child(even)::before {
     transform: rotate(170deg);
     bottom: 0px;
 }
 
-.navlinks a:nth-child(odd)::before {
+#navlinks a:nth-child(odd)::before {
     transform: rotate(200deg) scale(1, -1);
     top: 5px;
 }
-.navlinks a:hover::before, .navlinks a:active::before {
+#navlinks a:hover::before, #navlinks a:active::before {
     color: var(--accent-contrast-light);
-    right: -60px;
-    transition: all 0.2s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    display: initial;
+}
+
+.hidden {
+    height: 0; 
+    overflow: hidden;
+}
+
+.rotated {
+    transform: rotate(180deg);
+}
+
+@media screen and (max-width: 1100px) {
+    .topnav {
+        grid-template: 
+            "logo"
+            "links"
+            / 1fr;
+        position: relative;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .topnav {
+        grid-template: 
+            "toc logo linkmenu"
+            "links links links"
+            / 1fr 1fr 1fr;
+        position: relative;
+    }
+
+    #navlinks {
+        flex-wrap: wrap;
+    }
+
+    #navlinks a {
+        align-self: stretch;
+        width: 100%;
+    }
+
+    .mainlinkstoggle {
+        display: initial;
+        color: var(--accent-light);
+        grid-area: linkmenu;
+        margin: auto;
+    }
 }
 </style>
+<script>
+    function toggleMenu() {
+        let menu = document.getElementById('navlinks');
+        menu?.classList.toggle('hidden');
+        document.querySelector('.mainlinkstoggle')?.classList.toggle('rotated');
+    }
+    document.querySelector('.mainlinkstoggle').addEventListener('click', () => {
+        console.log('event fired');
+        toggleMenu();
+    });
+</script>
