--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -17,6 +17,7 @@ const { pageTitle } = Astro.props;
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Astloch:wght@400;700&family=Flamenco:wght@300;400&family=Kumar+One+Outline&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
+		<script src="https://kit.fontawesome.com/473cf0552e.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
 		<slot />
