--- a/src/pages/credits.astro
+++ b/src/pages/credits.astro
@@ -7,9 +7,11 @@ const pageTitle = "Index";
   <p>This website was made with the Astro static site generator framework and deployed via Github Books.</p>
   <p>Other resources that I used to build this website:</p>
   <ul>
-    <p>Google Fonts</p>
+    <li>Google Fonts</li>
     <li><a href="https://kayleerowena.com/blog/2025/code-template/#top">Portfolio Template</a> by Kaylee Rowena</li>
     <li><a href="https://www.toptal.com/designers/subtlepatterns/topography/">Topography pattern</a> by Shankar Ganesh</li>
     <li><a href="https://codepen.io/Kseso/pen/KKwjRy">Fancy Horizontal Rule Demo</a></li>
+    <li><a href="https://codepen.io/Umer_Farooq/pen/eYJgKGN">Light/Dark Toggle Button</a></li>
+    <li><a href="https://petrapixel.neocities.org">Coding Tutorials by PetraPixel</a></li>
   </ul>
 </InsectSplashLayout>
