--- a/src/styles/root.css
+++ b/src/styles/root.css
@@ -2,6 +2,7 @@
     --main-bg-color: #ffffff;
     --body-bg: #f1fbf3;
     --text-body: #000;
+    --accent-shadow: #07231a;
     --accent-dark: #245343;
     --accent-midtone: #5B744C;
     --accent-contrast-dark: #461905;
