--- a/src/components/ReaderControls.astro
+++ b/src/components/ReaderControls.astro
@@ -1,4 +1,5 @@
 ---
+import DarkModeToggle from "./DarkModeToggle.astro"
 ---
 <div class="control-container" transition:persist>
     <div id="reader-controls" class="hidden">
@@ -29,6 +30,7 @@
             <button type="button" class="changeGaramond"><span style="font-family: Garamond, serif;">Garamond</span></button>
             <button type="button" class="changeTahoma"><span style="font-family: Tahoma, sans-serif;">Tahoma</span></button>
         </div>
+        <div class="control-section"><b>Toggle theme:</b> <DarkModeToggle /></div>
         <div class="control-wrapper"><button type="button" class="restoreDefaults">Restore Defaults</button></div>
     </div>
     <div class="control-toggle" align="right">
@@ -41,7 +43,6 @@
     border: 1px solid var(--accent-ultralight);
     background-color: var(--main-bg-color);
     border-radius: 15px;
-    /* max-width: 200px; */
     margin: 0;
     font-family: 'Source Code Pro', 'Courier New', Courier, monospace;
     font-size: calc(1rem - 2px);
