--- a/src/layouts/InsectSplashLayout.astro
+++ b/src/layouts/InsectSplashLayout.astro
@@ -1,34 +1,25 @@
 ---
 import BaseLayout from './BaseLayout.astro';
 import '../styles/root.css';
+import '../styles/global.css';
 import '../styles/insect.css';
 const { pageTitle } = Astro.props;
 ---
 <BaseLayout>
     <div id="wrapper">
-        <div align="center">
+        <div id="insect-header" align="center">
             <div class="insect-deco">𓆨</div>
             <div class="splash-header">skolomorphic</div>
         </div>
-        <div style="display: flex; width: 100%;">
-            <div class="flex-side">
-                <nav>
-                    <ul class="navlinks">
-                        <li><a href="/">home</a></li>
-                        <li><a href="/projects">projects</a></li>
-                        <li><a href="/about">about</a></li>
-                        <li><a href="/credits">credits</a></li>
-                    </ul>
-                </nav>
-            </div>
-            <div class="flex-mainbody">
-                <div id="observation-jar">
-                    <div style="margin: 1rem; height: 100%; overflow: auto;">
-                        <div>
-                            <slot />
-                        </div>
-                    </div>
-                </div>
+        <nav id="insect-nav" class="navlinks">
+            <a href="/">home</a>
+            <a href="/projects">projects</a>
+            <a href="/about">about</a>
+            <a href="/credits">credits</a>
+        </nav>
+        <div id="observation-jar">
+            <div style="margin: 1rem;">
+                <slot />
             </div>
         </div>   
     </div>
