Update main pages content

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,7 @@ const pageTitle = "Index";
   <p>Thanks for dropping by.</p>
 
   <h2>Updates</h2>
+  <p><b>03.19.2025</b> Now mostly mobile proof!</p>
   <p><b>03.16.2025</b> Putting together the basic framework of the site.</p>
 
   <h2>To do list</h2>
