--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -4,5 +4,12 @@ const pageTitle = "Projects";
 ---
 <InsectSplashLayout pageTitle={pageTitle}>
   <h2>Projects</h2>
-  <p><b>Proof of Existence:</b> My Webbed Novel. <a href="/proof-of-existence/" data-astro-reload>read here</a></p>
+  <p><a href="/proof-of-existence/" data-astro-reload><b>Proof of Existence</b></a>: 
+  An original webnovel exploring the question of, "What if villain transmigration
+  novels were good?" A young man is summoned under mysterious circumstances to a
+dangerous new world, and must use all his wits to prevent anyone from finding out
+that he's not the real Acacius Duval.</p>
+<p><b>After We Were Saved:</b> An original story, upcoming. To be added...</p>
+<p><b>Monere's Shadow (Title WIP):</b> A comic exploring the meaning of trust, art, and communication. To be added...</p>
+<p><b>Essay collection:</b> Upcoming. To be added...</p>
 </InsectSplashLayout>
