--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -7,4 +7,5 @@ const pageTitle = "About";
   <p>Artist, writer, and software developer.</p>
   <p>Insect and invertebrate enthusiast.</p>
   <p>If you read my stories carefully, you can see that all my favorite themes have remained unchanged for the past 10 years.</p>
+  <p>Feel free to contact me at <a>skolomorphic@protonmail.com</a>.</p>
 </InsectSplashLayout>
