improve mobile dropdown header

--- a/src/pages/credits.astro
+++ b/src/pages/credits.astro
@@ -12,6 +12,7 @@ const pageTitle = "Index";
     <li><a href="https://www.toptal.com/designers/subtlepatterns/topography/">Topography pattern</a> by Shankar Ganesh</li>
     <li><a href="https://codepen.io/Kseso/pen/KKwjRy">Fancy Horizontal Rule Demo</a></li>
     <li><a href="https://codepen.io/Umer_Farooq/pen/eYJgKGN">Light/Dark Toggle Button</a></li>
-    <li><a href="https://petrapixel.neocities.org">Coding Tutorials by PetraPixel</a></li>
+    <li><a href="https://petrapixel.neocities.org">Coding Tutorials</a> by PetraPixel</li>
+    <li><a href="https://codepen.io/ravid7000/pen/ENeaRM">Pure CSS Navigation</a> by Ravi Dhiman</li>
   </ul>
 </InsectSplashLayout>
