--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,7 +2,12 @@
 ---
 <header class="topnav">
     <div class="logo">skolomorphic</div>
-    <button class="mainlinkstoggle"><i class="fas fa-chevron-down"></i></button>
+    <div class="mainlinkstoggle">
+        <input type="checkbox" id="togglemenu">
+        <label for="togglemenu" id="togglemenu-label">
+            <i class="fas fa-chevron-down" id="togglemenu-icon"></i>
+        </label>
+    </div>
     <nav id="navlinks">
         <a href="/" data-astro-reload>Home</a>
         <a href="/projects" data-astro-reload>Projects</a>
@@ -14,7 +19,7 @@
 .topnav {
     width: 100%;
     margin: 0;
-    padding: 1rem;
+    padding: 10px;
     background-color: var(--accent-dark);
     position: fixed;
     top: 0;
@@ -27,11 +32,18 @@
 }
 
 .mainlinkstoggle {
-    border: none;
-    background-color: transparent;
     display: none;
     grid-area: toggle;
     font-size: 24px;
+    color: var(--accent-light);
+}
+
+#togglemenu {
+    display: none;
+}
+
+#togglemenu-label {
+
 }
 
 /** NAVLINKS BASE */
@@ -105,13 +117,9 @@
     display: initial;
 }
 
-.hidden {
-    height: 0; 
-    overflow: hidden;
-}
-
-.rotated {
-    transform: rotate(180deg);
+/** Ensure buttons still display when resizing browser after hiding menu */
+.mainlinkstoggle:has(input[type="checkbox"]) ~ #navlinks {
+        height: auto;
 }
 
 @media screen and (max-width: 1100px) {
@@ -130,7 +138,7 @@
             "toc logo linkmenu"
             "links links links"
             / 1fr 1fr 1fr;
-        position: relative;
+        position: fixed;
     }
 
     #navlinks {
@@ -142,32 +150,30 @@
         width: 100%;
     }
 
+    #navlinks a::before {
+        content: none;
+        display: none;
+    }
+
     .mainlinkstoggle {
         display: initial;
         color: var(--accent-light);
         grid-area: linkmenu;
         margin: auto;
     }
+
+    .mainlinkstoggle:has(input[type="checkbox"]:checked) #togglemenu-label {
+        background-color: var(--accent-shadow);
+        border-radius: 15px;
+        padding: 5px;
+    }
+    .mainlinkstoggle:has(input[type="checkbox"]) ~ #navlinks {
+        height: 0;
+        overflow: hidden;
+    }
+
+    .mainlinkstoggle:has(input[type="checkbox"]:checked) ~ #navlinks {
+        height: auto;
+    }
 }
 </style>
-<script>
-    function toggleMenu() {
-        let menu = document.getElementById('navlinks');
-        menu?.classList.toggle('hidden');
-        document.querySelector('.mainlinkstoggle')?.classList.toggle('rotated');
-    }
-    document.querySelector('.mainlinkstoggle')?.addEventListener('click', () => {
-        console.log('event fired');
-        toggleMenu();
-    });
-    window.addEventListener("resize", function () {
-        if (window.innerWidth <= 600) {
-            document.getElementById('navlinks')?.classList.add('hidden');
-            document.querySelector('.mainlinkstoggle')?.classList.remove('rotated')
-        } else {
-            document.getElementById('navlinks')?.classList.remove('hidden');
-            document.querySelector('.mainlinkstoggle')?.classList.remove('rotated')
-        }
-        
-    });
-</script>
