fix link ::after bug on main pages

--- a/src/pages/credits.astro
+++ b/src/pages/credits.astro
@@ -4,7 +4,7 @@ const pageTitle = "Index";
 ---
 <InsectSplashLayout pageTitle={pageTitle}>
   <h2>Credits</h2>
-  <p>This website was made with the Astro static site generator framework and deployed via Github Books.</p>
+  <p>This website was made with the Astro static site generator framework and deployed via Github Books. Comments are powered by Cusdis.</p>
   <p>Other resources that I used to build this website:</p>
   <ul>
     <li>Google Fonts</li>
