--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,6 +1,7 @@
 ---
 import '../styles/root.css';
 import '../styles/global.css';
+import bgImage from '../resources/topography.png';
 import { ClientRouter } from "astro:transitions";
 const { pageTitle } = Astro.props;
 ---
@@ -13,7 +14,6 @@ const { pageTitle } = Astro.props;
 		<meta name="generator" content={Astro.generator} />
 		<title>{pageTitle}</title>
 		<ClientRouter />
-
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Astloch:wght@400;700&family=Flamenco:wght@300;400&family=Kumar+One+Outline&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
