--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,9 +1,15 @@
 ---
 import '../styles/root.css';
 import '../styles/global.css';
-import bgImage from '../resources/topography.png';
+import { getImage } from "astro:assets";
 import { ClientRouter } from "astro:transitions";
 const { pageTitle } = Astro.props;
+
+import image from "../resources/topography.png";
+const optimizedImage = await getImage({
+  src: image,
+  format: "webp",
+});
 ---
 
 <html lang="en">
