revert preload bgimage

--- a/src/layouts/InsectSplashLayout.astro
+++ b/src/layouts/InsectSplashLayout.astro
@@ -5,7 +5,7 @@ import '../styles/global.css';
 import '../styles/insect.css';
 const { pageTitle } = Astro.props;
 ---
-<BaseLayout>
+<BaseLayout pageTitle={pageTitle}>
     <div id="wrapper">
         <div id="insect-header" align="center">
             <div class="insect-deco">𓆨</div>
