--- a/src/styles/root.css
+++ b/src/styles/root.css
@@ -1,5 +1,6 @@
 :root {
     --main-bg-color: #ffffff;
+    --dark-bg-color: #0B0B0B;
     --body-bg: #f1fbf3;
     --text-body: #000;
     --accent-shadow: #07231a;
